src/test/ui/generic-associated-types/issue-74684-2.stderr
warning: the feature `generic_associated_types` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/issue-74684-2.rs:1:12
   |
LL | #![feature(generic_associated_types)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #44265 <https://github.com/rust-lang/rust/issues/44265> for more information

error[E0271]: type mismatch resolving `<{integer} as Fun>::F<'_> == [u8]`
  --> $DIR/issue-74684-2.rs:24:5
   |
LL |     type F<'a> = i32;
   |                  --- expected this to be `[u8]`
...
LL | fn bug<'a, T: ?Sized + Fun<F<'a> = [u8]>>(t: Box<T>) -> &'static T::F<'a> {
   |                            ------------ required by this bound in `bug`
...
LL |     bug(Box::new(x));
   |     ^^^ type mismatch resolving `<{integer} as Fun>::F<'_> == [u8]`

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0271`.
